syntax = "proto3";

package micro.service.user;
option go_package = "proto/user";

service UserService {
  rpc Pagination(PaginationRequest) returns(PaginationResponse){}
  rpc Get(GetRequest) returns(UserResponse){}
  rpc Create(CreateRequest) returns(UserResponse){}
  rpc Update(UpdateRequest) returns(UserResponse){}
  rpc Delete(DeleteRequest) returns(UserResponse){}
  rpc Auth(AuthRequest) returns(TokenResponse){}
  rpc ValidateToken(TokenRequest) returns(TokenResponse){}
}

message User{
  uint64 id = 1;
  string name = 3;
  string email = 4;
  string real_name = 6;
  string avatar = 7;
  string create_at = 9;
  string update_at = 10;
}

//UserResponse 单个用户响应
message UserResponse{
  User user = 1;
}

//PaginationResponse 用户分页数据响应
message PaginationResponse{
  repeated User users = 1;
  uint64 total = 2;
}

//PaginationRequest 用户分页请求
message PaginationRequest{
  uint64 page = 1;
  uint32 perPage = 2;
}

//GetRequest 获取单个用户请求
message GetRequest{
  uint64 id = 1;
}

//CreateRequest 创建用户请求
message CreateRequest{
  string name = 1;
  string password = 2;
  string email = 3;
  string real_name = 4;
  string avatar = 5;
}

//UpdateRequest 更新用户请求
message UpdateRequest{
  uint64 id = 1;
  string name = 2;
  string email = 3;
  string real_name = 4;
  string avatar = 6;
}

//DeleteRequest 删除用户请求
message DeleteRequest{
  uint64 id = 1;
}

//AuthRequest 登录请求
message AuthRequest{
  string email = 1;
  string password = 2;
}

//TokenRequest token验证接口
message TokenRequest{
  string token = 1;
}

//TokenResponse token响应接口
message TokenResponse{
  string token = 1;
  bool valid = 2;
}


